# Multi-Agent-for-Stock-Management-ERP-System

./: .gitignore  README.md  app.py  docker-compose.yml  main.py  mcp_server_manager.py  pyproject.toml  requirements.txt  server.py
config/: agents.json  prompts.py  prompts.yml  settings.py
config/profiles/: default.json  development.json  production.json
config/prompts/: __init__.py  chat_agent.py  orchestrator.py  summary_agent.py  worker.py
docs/: api.md  architecture.md  workflow-diagram.html
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
scripts/: run.sh
src/agents/: analytics_agent.py  base_agent.py  chat_agent.py  forecasting_agent.py  inventory_agent.py  orchestrator_agent.py  ordering_agent.py  registry.py  summary_agent.py  worker_agent.py
src/api/: admin_endpoints.py  auth_endpoints.py  conversation_endpoints.py  endpoints.py  lifespan.py
src/communication/: __init__.py  embedding.py  erpnext.py  llm.py  qdrant.py  redis.py
src/managers/: __init__.py  analytics_manager.py  (+4 more)
tests/: basic_manager_test.py  conftest.py  main_test.py  quick_test.py  redis_test.py  run_demo.py  run_lifecycle_test.py  simple_stress_test.py  test_agent_groq.py  test_api.py  test_client.py  test_complete_multi_agent_flow.py  test_event_driven_manager.py  test_inventory_server.py  test_mcp_client.py  test_mcp_server.py  test_redis.py  test_redis_pub-sub.py  test_redis_pub.py  test_redis_sub.py  test_refactor_verification.py  test_task_lifecycle.py  test_ultra_simple_schema.py  test_worker_agent_prompt.py  verify_fuzzy_search.py
(+127 files in other folders)
